Bug 1286847 - Remove calls to XGetGeometry from the compositor thread. r=jgilbert,jrmuizel

MozReview-Commit-ID: IAd2y1FgiFn